[package]
name = "tcs3472"
version = "0.1.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/tcs3472-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TCS3472 RGB color light to digital converter with IR filter."
readme = "README.md"
keywords = ["color", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/tcs3472-rs"
documentation = "https://docs.rs/tcs3472"
edition = "2018"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
