[package]
name = "tcs3472"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/tcs3472-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the TCS3472 RGB color light to digital converter with IR filter."
readme = "README.md"
keywords = ["color", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/tcs3472-rs"
documentation = "https://docs.rs/tcs3472"
edition = "2018"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[features]
default = []
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }

[dev-dependencies]
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal.git", rev = "a0e0a8dba070de204cf724a41ec18fc3fd68a080" }
embedded-hal-mock = { version = "0.10.0-rc.2", default-features = false, features = ["eh1"] }

[profile.release]
lto = true
